# compiler-book-rust

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  readme
compiler/: Cargo.toml
compiler/src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs  semantic.rs  token.rs
src/: content.config.ts  nav.ts
src/content/docs/: codegen-intro.md  codegen-typescript.md  getting-started.md  lexer-build.md  lexer-intro.md  parser-build.md  parser-intro.md  project-plan.md  putting-together.md  semantic.md  struct.md  types-safety.md  what-is-compiler.md
src/layouts/: DocLayout.astro
src/pages/: index.astro
src/pages/docs/: [...slug].astro  codegen-intro.md  codegen-typescript.md  getting-started.md  lexer-build.md  lexer-intro.md  parser-build.md  parser-intro.md  project-plan.md  putting-together.md  semantic.md  what-is-compiler.md
src/styles/: global.css
